syntax = "proto3";

package gramophile;

option go_package = "github.com/brotherlogic/gramophile/proto";

enum Basis {
    DISCOGS = 0;
    GRAMOPHILE = 1;
}

enum Mandate {
    NONE = 0;
    RECOMMENDED = 1;
    REQUIRED = 2;
}


message Filter {
    repeated string formats = 1;
    repeated int32 exclude_folder = 2;
}

message CleaningConfig {
    Mandate cleaning = 1;
    Filter applies_to = 2;

    int64 cleaning_gap_in_seconds = 3;
    int32 cleaning_gap_in_plays = 4;
}

message GramophileConfig {
    Basis basis = 2;
    CleaningConfig cleaning_config = 1;
}